fixtures/errors/missing_import.hu
@use nonexistent_symbol from "helpers.hu"
